--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "starter",
-  "version": "0.0.0",
+  "name": "angular-oauth2-oidc",
+  "version": "5.0.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -15,7 +15,8 @@
     "docs:serve": "npm run docs:build -- -s",
     "docs:watch": "npm run docs:build -- -s -w",
     "format": "prettier --single-quote --write projects/**/*.ts",
-    "copy:readme": "cpr README.md dist/lib/README.md --overwrite"
+    "copy:readme": "cpr README.md dist/lib/README.md --overwrite",
+    "prepare": "npm run build"
   },
   "private": true,
   "dependencies": {
